--- a/snack-machine-backend/src/main/resources/application.yml
+++ b/snack-machine-backend/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgres://localhost:5432/snack-machine
+    url: jdbc:postgresql://localhost:5432/snack-machine
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
